--- a/Code/main.html
+++ b/Code/main.html
@@ -1,6 +1,24 @@
+
 <html>
     <head>
         <title>Portfolio</title>
-        <link ref="styleheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
+    <body>
+        <div class="main">    
+            <div class="navbar">
+                <img src="UI\pfp.png" class="logo">
+                <ul>
+                    <li><a href=#>About Me</a></li>
+                    <li><a href=#>Project</a></li>
+                    <li><a href=#>Contact</a></li>
+                </ul>
+            </div>
+            <h1>Portfolio</h1>
+            <div class="def">
+            <h2>HI ! I am Ashvin Santhosh an undergraduate Compute Science student in Mahatma Gandhi University, Kerala
+                <br>Welcome to my Portfolio. Enjoy!</h2>
+            </div>
+        </div>
+    </body>
 </html>
