--- a/Code/main.html
+++ b/Code/main.html
@@ -7,7 +7,9 @@
     <body>
         <div class="main">    
             <div class="navbar">
-                <img src="UI\pfp.png" class="logo">
+                <div class="pfp" style="background-color: red;">
+                    <img src="UI\pfp.png" class="logo">
+                </div>
                 <ul>
                     <li><a href=#>About Me</a></li>
                     <li><a href=#>Project</a></li>
@@ -16,7 +18,7 @@
             </div>
             <h1>Portfolio</h1>
             <div class="def">
-            <h2>HI ! I am Ashvin Santhosh an undergraduate Compute Science student in Mahatma Gandhi University, Kerala
+            <h2>HI ! I am Ashvin Santhosh an undergraduate Compute Science student in Mahatma Gandhi University, Kerala.
                 <br>Welcome to my Portfolio. Enjoy!</h2>
             </div>
         </div>
