--- a/Code/main.html
+++ b/Code/main.html
@@ -7,16 +7,20 @@
     <body>
         <div class="main">    
             <div class="navbar">
-                <div class="pfp" style="background-color: red;">
+                <div class="pfp">
                     <img src="UI\pfp.png" class="logo">
                 </div>
-                <ul>
-                    <li><a href=#>About Me</a></li>
-                    <li><a href=#>Project</a></li>
-                    <li><a href=#>Contact</a></li>
-                </ul>
+                <div class="menu">
+                    <ul>
+                     <li><a href=#>About Me</a></li>
+                     <li><a href=#>Project</a></li>
+                      <li><a href=#>Contact</a></li>
+                   </ul>
+                </div>
             </div>
-            <h1>Portfolio</h1>
+            <div class="head" style="background-color: red;">
+                <h1>Portfolio</h1>
+            </div>
             <div class="def">
             <h2>HI ! I am Ashvin Santhosh an undergraduate Compute Science student in Mahatma Gandhi University, Kerala.
                 <br>Welcome to my Portfolio. Enjoy!</h2>
