--- a/Code/main.html
+++ b/Code/main.html
@@ -16,11 +16,31 @@
                     <li><a href=#>Contact</a></li>
                 </ul>
             </div>
-            <h1>Portfolio</h1>
-            <div class="def">
-            <h2>HI ! I am Ashvin Santhosh an undergraduate Compute Science student in Mahatma Gandhi University, Kerala.
-                <br>Welcome to my Portfolio. Enjoy!</h2>
-            </div>
+           <div class="content">
+            <center>
+                <table border="0">
+                    
+                    <tr>
+                        <td style="font-size: 92px;
+                        font-family: fantasy;"
+                        >
+                           PORTFOLIO
+                           
+                        </td>
+                        <div class = "vertical"></div>    
+                        <td style="
+                        font-size: 33px;
+                        width: 554;
+                        height: 225;">
+                            <div style="padding-left: 15px;background-color:#a99f911f">
+                                HI ! I am Ashvin Santhosh an undergraduate Compute Science student in Mahatma Gandhi University, Kerala.
+                                <br>Welcome to my Portfolio. Enjoy!
+                        </div>
+                        </td>
+                    </tr>
+                </table>
+            </center>
+           </div>
         </div>
     </body>
 </html>
