--- a/Code/main.html
+++ b/Code/main.html
@@ -18,25 +18,13 @@
                    </ul>
                 </div>
             </div>
-            <div class="head" style="background-color: red;">
-                <h1>Portfolio</h1>
-            </div>
-<<<<<<< HEAD
-            <div class="def">
-            <h2>HI ! I am Ashvin Santhosh an undergraduate Compute Science student in Mahatma Gandhi University, Kerala.
-                <br>Welcome to my Portfolio. Enjoy!</h2>
-            </div>
-=======
            <div class="content">
             <center>
                 <table border="0">
                     
                     <tr>
-                        <td style="font-size: 92px;
-                        font-family: fantasy;"
-                        >
-                           PORTFOLIO
-                           
+                        <td>
+                           <h1><span>P</span>ORTFOLIO</h1>
                         </td>
                         <div class = "vertical"></div>    
                         <td style="
@@ -52,7 +40,6 @@
                 </table>
             </center>
            </div>
->>>>>>> 194c8cfcdbca24d6d7955f55fb6001e3d8f90da5
         </div>
     </body>
 </html>
