--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>Portfolio</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Code\style.css">
     </head>
     <body>
         <div class="main">    
             <div class="navbar">
                 <div class="pfp">
-                    <img src="UI\pfp.png" class="logo">
+                    <img src="Code\UI\pfp.png" class="logo">
                 </div>
                 <div class="menu">
                     <ul>
