--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Portfolio</title>
         <link rel="stylesheet" href="Code\style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="main">    
@@ -26,18 +27,16 @@
                         <td>
                            <h1><span>P</span>ORTFOLIO</h1>
                         </td>
-                        <div class = "vertical"></div>    
-                        <td style="
-                        font-size: 33px;
-                        width: 554;
-                        height: 225;">
-                            <div style="padding-left: 15px;background-color:#a99f911f">
+                         <div class = "vertical0"></div>  
+                        <td>
+                            <div class="desc">
                                 HI ! I am Ashvin Santhosh an undergraduate Compute Science student in Mahatma Gandhi University, Kerala.
                                 <br>Welcome to my Portfolio. Enjoy!
                         </div>
                         </td>
                     </tr>
                 </table>
+                <hr class="line">
             </center>
            </div>
         </div>
