--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Portfolio</title>
         <link rel="stylesheet" href="Code\style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css?family=Inter:400,800,900&display=swap">
     </head>
     <body>
         <div class="main">    
