--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
-
 <html>
+
     <head>
         <title>Portfolio</title>
-        <link rel="stylesheet" href="Code\style.css">
+        <link rel="stylesheet" href="Code\style2.0.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Inter:400,800,900&display=swap">
     </head>
+
     <body>
         <div class="main">    
             <div class="navbar">
+                
                 <div class="pfp">
                     <img src="Code\UI\pfp.png" class="logo">
                 </div>
+
                 <div class="menu">
                     <ul>
-                     <li><a href=#>About Me</a></li>
-                     <li><a href=#>Project</a></li>
-                      <li><a href=#>Contact</a></li>
+                     <li><a href="Code/AboutMe.html">AboutMe</a></li>
+                     <li><a href="Code/Project.html">Project</a></li>
+                      <li><a href="Code/ContactMe.html">Contact</a></li>
                    </ul>
                 </div>
+            
             </div>
+
            <div class="content">
             <center>
                 <table border="0">
@@ -30,14 +35,79 @@
                         </td> 
                         <td>
                             <div class="desc">
-                                HI ! I am Ashvin Santhosh an undergraduate Compute Science student in Mahatma Gandhi University, Kerala.
-                                <br>Welcome to my Portfolio. Enjoy!
+                                <p>
+                                    HI ! I am Ashvin Santhosh an undergraduate Compute Science student in Mahatma Gandhi University, Kerala.
+                                    <br>Welcome to my Portfolio. Enjoy!
+                                </p>
                         </div>
                         </td>
                     </tr>
                 </table>
                 <hr class="line">
             </center>
+           </div>
+           <div class="push">
+             <div class="h2">
+                <dl>
+                <dt><h2>Education</h2></dt>
+                    <dd>
+                       2019 - 10th from BMM Pampady, CBSE 
+                    </dd>
+                    <dd>
+                        2021 - 12th from BMM Pampady, CBSE 
+                     </dd>
+                     <dd>
+                        2024 - 10th from BMM Pampady, CBSE 
+                     </dd>
+                </dl>
+
+                <dl>
+                <dt><h2>Experience</h2></dt>
+                    <dd>
+                      2016 - Youtuber
+                     </dd>
+                    <dd>
+                       2020 - Freelance Video Editor
+                    </dd>
+                    <dd>
+                        2024 - Developer
+                     </dd>
+                </dl>
+
+                <dl class ="desc">
+                    <dt><h2>Skills</h2></dt>
+                        <dd>
+                            <li>
+                                Adobe After Effects
+                            </li>
+                            <li>
+                                Adobe Premiere Pro
+                            </li>
+                            <li>
+                                C Language
+                            </li>
+                            <li>
+                                C++ Language
+                            </li>
+                            <li>
+                                MySQL DataBase
+                            </li>
+                            <li>
+                                Figma
+                            </li>
+                            <li>
+                                HTML
+                            </li>
+                            <li>
+                                CSS
+                            </li>
+                            <li>
+                                JavaScript
+                            </li>
+                        </dd>
+                </dl>
+
+             </div>
            </div>
         </div>
     </body>
