--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Portfolio</title>
         <link rel="stylesheet" href="Code\style2.0.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css?family=Inter:400,800,900&display=swap">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/inter-ui/3.19.3/inter.css">
     </head>
 
     <body>
