shadow , grided push

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 
                 <div class="desc">
                     <p>
-                        HI ! I am Ashvin Santhosh an undergraduate Compute Science student in Mahatma Gandhi University, Kerala.
+                        HI ! I am Ashvin Santhosh an undergraduate Computer Science student in Mahatma Gandhi University, Kerala.
                         <br>Welcome to my Portfolio. Enjoy!
                      </p>
                 </div>
