--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
         <title>Portfolio</title>
         <link rel="stylesheet" href="Code\style2.0.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/inter-ui/3.19.3/inter.css">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/inter-ui/3.19.3/inter.min.css">
     </head>
 
     <body>
@@ -55,38 +53,28 @@
                         <dd>
                            2019 - 10th from BMM Pampady, CBSE 
                         </dd>
-                        <dd></dd>
-                        <dd>
 
-
-                        </dd>
                         <dd>
                             2021 - 12th from BMM Pampady, CBSE 
                          </dd>
-                         <dd></dd>
-                         <dd></dd>
-                         </dd>
+
                          <dd>
                             2024 - B.C.A from BVM Chermpunkal,M.G.U 
                          </dd>
                     </dl>
                 </div>
-    
+                <div class="space"></div>
                     <div class="exp">
                         <dl>
                             <dt><h2>Experience</h2></dt>
                                 <dd>
                                   2016 - Youtuber
                                  </dd>
-                                 <dd>
 
-                                 </dd>
                                 <dd>
                                    2020 - Freelance Video Editor
                                 </dd>
-                                <dd>
 
-                                </dd>
                                 <dd>
                                     2024 - Developer
                                  </dd>
