--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head>
         <title>Portfolio</title>
-        <link rel="stylesheet" href="Code\style2.0.css">
+        <link rel="stylesheet" href="style2.0.css">
     </head>
 
     <body>
@@ -141,10 +141,10 @@
             <div class="icon">
 
                 <div class="ic">
-                    <a href="https://github.com/Vrindtime"><img src="./Code/UI/github.png"></a>
-                    <a href="https://www.behance.net/vrindtime"><img src="./Code/UI/iconmonstr-behance-1.svg"></a>
-                    <a href="https://www.youtube.com/@vrindtime"><img src="./Code/UI/youtube.png"></a>
-                    <a href="https://discord.com/users/Alluka#0741"><img src="./Code/UI/discord.png"></a>
+                    <a href="https://github.com/Vrindtime"><img src="Code/UI/github.png"></a>
+                    <a href="https://www.behance.net/vrindtime"><img src="Code/UI/iconmonstr-behance-1.svg"></a>
+                    <a href="https://www.youtube.com/@vrindtime"><img src="Code/UI/youtube.png"></a>
+                    <a href="https://discord.com/users/Alluka#0741"><img src="Code/UI/discord.png"></a>
                 </div>
 
                 <div class="btt">
