--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
             <div class="icon">
 
                 <div class="ic">
-                    <a href="https://github.com/Vrindtime"><img src="Code/UI/github.png"></a>
-                    <a href="https://www.behance.net/vrindtime"><img src="Code/UI/iconmonstr-behance-1.svg"></a>
-                    <a href="https://www.youtube.com/@vrindtime"><img src="Code/UI/youtube.png"></a>
-                    <a href="https://discord.com/users/Alluka#0741"><img src="Code/UI/discord.png"></a>
+                    <a href="https://github.com/Vrindtime"><img src="Code/UI/github.PNG"></a>
+                    <a href="https://www.behance.net/vrindtime"><img src="Code/UI/iconmonstr-behance-1.SVG"></a>
+                    <a href="https://www.youtube.com/@vrindtime"><img src="Code/UI/youtube.PNG"></a>
+                    <a href="https://discord.com/users/Alluka#0741"><img src="Code/UI/discord.PNG"></a>
                 </div>
 
                 <div class="btt">
