name change using"\"

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style2.0.css">
     </head>
 
-    <body>
+    <body background="Code\UI\yellowbg.JPEG">
        
         <!--Navigation bar and profile pic-->
         <div class="main">    
@@ -141,14 +141,14 @@
             <div class="icon">
 
                 <div class="ic">
-                    <a href="https://github.com/Vrindtime"><img src="Code/UI/github.PNG"></a>
-                    <a href="https://www.behance.net/vrindtime"><img src="Code/UI/iconmonstr-behance-1.SVG"></a>
-                    <a href="https://www.youtube.com/@vrindtime"><img src="Code/UI/youtube.PNG"></a>
-                    <a href="https://discord.com/users/Alluka#0741"><img src="Code/UI/discord.PNG"></a>
+                    <a href="https://github.com/Vrindtime"><img src="Code\UI\github.PNG"></a>
+                    <a href="https://www.behance.net/vrindtime"><img src="Code\UI\iconmonstr-behance-1.SVG"></a>
+                    <a href="https://www.youtube.com/@vrindtime"><img src="Code\UI\youtube.PNG"></a>
+                    <a href="https://discord.com/users/Alluka#0741"><img src="Code\UI\discord.PNG"></a>
                 </div>
 
                 <div class="btt">
-                    <a href="#"><img src="/Code/UI/angle-circle-up.svg"><p>Back To Top</p></a>    
+                    <a href="#"><img src="\Code\UI\angle-circle-up.svg"><p>Back To Top</p></a>    
                 </div>
         
             </div>
