--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="navbar">
                 
                 <div class="pfp">
-                    <img src="Code\UI\pfp.png" class="logo">
+                    <img src="Code/UI/pfp.png" class="logo">
                 </div>
 
                 <div class="menu">
