--- a/Code/AboutMe.html
+++ b/Code/AboutMe.html
@@ -4,11 +4,24 @@
     <title>About Me</title>
     <link rel="stylesheet" href="style2.0.css">
 </head>
-    <h1>
-        
-    </h1>
-<body>
     
+<body>
+    <div class="menu">
+
+        <div class="pfp">
+            <img src="/code/ui/pfp.png" class="logo">
+        </div>
+
+        <ul>
+            <li><a href="/code/AboutMe.html">AboutMe</a></li>
+            <li><a href="/code/Project.html">Project</a></li>
+            <li><a href="/code/ContactMe.html">Contact</a></li>
+       </ul>
+    </div>
+
+    <h1>
+        About me
+    </h1>
 </body>
 
 <footer class="cc">
