--- a/Code/AboutMe.html
+++ b/Code/AboutMe.html
@@ -5,17 +5,17 @@
     <link rel="stylesheet" href="style2.0.css">
 </head>
     
-<body>
+<body background="Code/ui/yellowbg.jpeg">
     <div class="menu">
 
         <div class="pfp">
-            <img src="/code/ui/pfp.png" class="logo">
+            <img src="./code/ui/pfp.png" class="logo">
         </div>
 
         <ul>
-            <li><a href="/code/AboutMe.html">AboutMe</a></li>
-            <li><a href="/code/Project.html">Project</a></li>
-            <li><a href="/code/ContactMe.html">Contact</a></li>
+            <li><a href="./code/AboutMe.html">AboutMe</a></li>
+            <li><a href="./code/Project.html">Project</a></li>
+            <li><a href="./code/ContactMe.html">Contact</a></li>
        </ul>
     </div>
 
