--- a/Code/AboutMe.html
+++ b/Code/AboutMe.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style2.0.css">
 </head>
     
-<body background="Code/ui/yellowbg.jpeg">
+<body background="./code/ui/yellowbg.jpeg">
     <div class="menu">
 
         <div class="pfp">
@@ -18,7 +18,7 @@
             <li><a href="./code/ContactMe.html">Contact</a></li>
        </ul>
     </div>
-
+    
     <h1>
         About me
     </h1>
