--- a/Code/AboutMe.html
+++ b/Code/AboutMe.html
@@ -2,26 +2,45 @@
 <html lang="en">
 <head>
     <title>About Me</title>
-    <link rel="stylesheet" href="style2.0.css">
+    <link rel="stylesheet" href="style2.1.css">
 </head>
     
-<body background="./code/ui/yellowbg.jpeg">
+<body background="./ui/yellowbg.jpeg">
+
     <div class="menu">
 
         <div class="pfp">
-            <img src="./code/ui/pfp.png" class="logo">
+            <a href="../index.html"><img src="./ui/pfp.png" class="logo"></a>
         </div>
 
         <ul>
-            <li><a href="./code/AboutMe.html">AboutMe</a></li>
-            <li><a href="./code/Project.html">Project</a></li>
-            <li><a href="./code/ContactMe.html">Contact</a></li>
+            <li><a href="#">AboutMe</a></li>
+            <li><a href="./Project.html">Project</a></li>
+            <li><a href="./ContactMe.html">Contact</a></li>
        </ul>
     </div>
-    
-    <h1>
-        About me
-    </h1>
+
+    <h1 class="title"><span>A</span>bout<span>M</span>e</h1>
+
+    <div class="content">
+        <p>
+            HI ! I am Ashvin Santhosh a kid who 
+            is obsessed with everything tech related , 
+            Anything that catches my interest i will try to 
+            do it that including Video editing, 
+            Coding, building projects etc. 
+            <br>
+            I have been a Youtuber for science and arts 
+            Projects then moved on to as a Freelance Video Editor 
+            and now Pursuing a role in a Software Engineer.
+        </p>
+
+        <div class="spic">
+            <img src="./ui/pfp.png" class="logo">
+        </div>
+
+    </div>
+
 </body>
 
 <footer class="cc">
