--- a/Code/AboutMe.html
+++ b/Code/AboutMe.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="#">AboutMe</a></li>
             <li><a href="./Project.html">Project</a></li>
-            <li><a href="./ContactMe.html">Contact</a></li>
+            <li><a href="../index.html#ContactMe">Contact</a></li>
        </ul>
     </div>
 
