--- a/Code/Project.html
+++ b/Code/Project.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="./AboutMe.html">AboutMe</a></li>
             <li><a href="#">Project</a></li>
-            <li><a href="./code/ContactMe.html">Contact</a></li>
+            <li><a href="../index.html#ContactMe">Contact</a></li>
        </ul>
     </div>
 
