--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             <div class="navbar">
                 
                 <div class="pfp">
-                    <img src="./code/ui/pfp.png" class="logo">
+                    <img src="./Code/UI/pfp.png" class="logo">
                 </div>
 
                 <div class="menu">
                     <ul>
-                        <li><a href="./code/AboutMe.html">AboutMe</a></li>
-                        <li><a href="./code/Project.html">Project</a></li>
+                        <li><a href="./Code/AboutMe.html">AboutMe</a></li>
+                        <li><a href="./Code/Project.html">Project</a></li>
                         <li><a href="#ContactMe">Contact</a></li>
                    </ul>
                 </div>
@@ -142,14 +142,14 @@
             <div class="icon">
 
                 <div class="ic">
-                    <a href="https://github.com/Vrindtime"><img src="./code/ui/github.png"></a>
-                    <a href="https://www.behance.net/vrindtime"><img src="./code/ui/iconmonstr-behance-1.svg"></a>
-                    <a href="https://www.youtube.com/@vrindtime"><img src="./code/ui/youtube.png"></a>
-                    <a href="https://discord.com/users/Alluka#0741"><img src="./code/ui/discord.png"></a>
+                    <a href="https://github.com/Vrindtime"><img src="./Code/UI/github.png"></a>
+                    <a href="https://www.behance.net/vrindtime"><img src="./Code/UI/iconmonstr-behance-1.svg"></a>
+                    <a href="https://www.youtube.com/@vrindtime"><img src="./Code/UI/youtube.png"></a>
+                    <a href="https://discord.com/users/Alluka#0741"><img src="./Code/UI/discord.png"></a>
                 </div>
 
                 <div class="btt">
-                    <a href="#"><img src="./code/ui/angle-circle-up.svg"><p>Back To Top</p></a>    
+                    <a href="#"><img src="./Code/UI/angle-circle-up.svg"><p>Back To Top</p></a>    
                 </div>
         
             </div>
