v2 link and images fix

--- a/Code/AboutMe.html
+++ b/Code/AboutMe.html
@@ -10,7 +10,7 @@
     <div class="menu">
 
         <div class="pfp">
-            <a href="../index.html"><img src="./ui/pfp.png" class="logo"></a>
+            <a href="../index.html"><img src="./UI/pfp.png" class="logo"></a>
         </div>
 
         <ul>
@@ -36,7 +36,7 @@
         </p>
 
         <div class="spic">
-            <img src="./ui/pfp.png" class="logo">
+            <img src="./UI/pfp.png" class="logo">
         </div>
 
     </div>
