--- a/Code/Project.html
+++ b/Code/Project.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" href="style2.1.css">
 </head>
     
-<body background="./ui/yellowbg.jpeg">
+<body background="./UI/yellowbg.jpeg">
 
     <div class="menu">
 
         <div class="pfp">
-            <a href="../index.html"><img src="./ui/pfp.png" class="logo"></a>
+            <a href="../index.html"><img src="./UI/pfp.png" class="logo"></a>
         </div>
 
         <ul>
