--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style2.0.css">
     </head>
 
-    <body background="./code/ui/yellowbg.jpeg">
+    <body background="./Code/UI/yellowbg.jpeg">
        
         <!--Navigation bar and profile pic-->
         <div class="main">    
