--- a/Code/AboutMe.html
+++ b/Code/AboutMe.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style2.1.css">
 </head>
     
-<body background="./ui/yellowbg.jpeg">
+<body background="./UI/yellowbg.jpeg">
 
     <div class="menu">
 
